--- a/style/favorites.scss
+++ b/style/favorites.scss
@@ -22,11 +22,14 @@
 //Footer 
 @import "_footer.scss";
 
+#margin-galery{
+    margin-left: 10%;
+}
 .title-favoritos {
     color: $purple-color;
     font-size: 15px;
     text-align: center;
-    margin-top: 2px;
+    margin-top: 8%;
 }
 #default-msg{
     font-size: 22px;
@@ -45,14 +48,61 @@
 }
 
 .galery{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    max-width: 80%; 
-    margin-left: 10%; 
+    
+    display: inline;
+    width: calc(260px * 4 + 4em);
+    margin: auto;
+  
+}
+
+.galeryMeasure{
+    width: 260px; 
+    height: 200px;
+    margin-left: 2%;
+    margin-bottom: 2%;
 }
 
 .img-layer{
+    display: inline;
+    position: absolute;
+    width: 262px;
+    height: 200px;
+    margin-left: -262px;
+    margin-top: 0;
+    z-index: 0;
+    opacity: 0;
+    transition: all .3s ease-in-out;  
+
+}
+.img-layer:hover {
+   background-color: $purple-color;
+   opacity: 0.7;
+   width: 263px;
+   height: 200px;
+}
+#icons-layer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 2%;
+}
+.icons-layer {
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    margin-right: 4%;
+    margin-top: 5%;
+    border:none;
+    border-radius: 6px;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+/*.img-layer{
     width: 260px;
     height: 200px;
     display: flex;
@@ -89,7 +139,9 @@
     font: inherit;
     cursor: pointer;
     outline: inherit;
-}
+}    4/08*/
+
+
 //.img-layer:hover
 
 
@@ -135,3 +187,23 @@
     height: 120px;
     margin: 0 auto;
 }*/
+
+@media only screen and (max-width: 615px) {
+
+    .galeryMeasure{
+        width: 156px; 
+        height: 120px;
+        margin-left: 5%;
+        margin-bottom: 5%;
+    }
+    .galery{
+        display: inline;
+        width: calc(156px * 2 + 4em);
+        margin: auto;
+  
+    }
+    .img-layer{
+        display: none;
+    }
+    
+}
