--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -47,7 +47,23 @@
   margin-right: 10.83%;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 615px) {
     
+  .icon-container{
+    flex-direction: column;
+    margin: 0;
+  }
+  .media-container{
+    flex-direction: column;
+    justify-content: center;
+  }
+ #icons{
+    justify-content: center;
+   // margin-left: -20px;
+    //padding: 0;
+  }
+  .copyright{
+    margin: 0;
+  }
 }  
   
