--- a/style/my-gifs.scss
+++ b/style/my-gifs.scss
@@ -20,11 +20,14 @@
 //Footer 
 @import "_footer.scss";
 
+#margin-galery{
+    margin-left: 10%;
+}
 .title-mygifs {
     color: $purple-color;
     font-size: 15px;
     text-align: center;
-    margin-top: 2px;
+    margin-top: 8%;
 }
 #default-msg{
     font-size: 22px;
@@ -43,6 +46,65 @@
 }
 
 .galery{
+    
+    display: inline;
+    width: calc(260px * 4 + 4em);
+    margin: auto;
+  
+}
+
+.galeryMeasure{
+    width: 260px; 
+    height: 200px;
+    margin-left: 2%;
+    margin-bottom: 2%;
+}
+
+.img-layer{
+    display: inline;
+    position: absolute;
+    width: 262px;
+    height: 200px;
+    margin-left: -262px;
+    margin-top: 0;
+    z-index: 0;
+    opacity: 0;
+    transition: all .3s ease-in-out;  
+
+}
+.img-layer:hover {
+   background-color: $purple-color;
+   opacity: 0.7;
+   width: 263px;
+   height: 200px;
+}
+#icons-layer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 2%;
+}
+.icons-layer {
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    margin-right: 4%;
+    margin-top: 5%;
+    border:none;
+    border-radius: 6px;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
+
+
+
+/*.galery{
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
@@ -87,4 +149,24 @@
     font: inherit;
     cursor: pointer;
     outline: inherit;
+}*/
+
+@media only screen and (max-width: 615px) {
+
+    .galeryMeasure{
+        width: 156px; 
+        height: 120px;
+        margin-left: 5%;
+        margin-bottom: 5%;
+    }
+    .galery{
+        display: inline;
+        width: calc(156px * 2 + 4em);
+        margin: auto;
+  
+    }
+    .img-layer{
+        display: none;
+    }
+    
 }
