I delete a strange file called gifo.html that I didnt create

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -437,7 +437,7 @@ form{
     .container_search{
         margin-left: 5%;
         margin-top: 5%;
-        max: width 334px;;
+        max-width:  334px;;
         margin-left: 10%;
     }
     .container__photo {
